webdrivermanager (2.0.1)

  + Configuration keys (wdm.*) are now optional (default values: false, "", 0)
  + Include configuration key wdm.forceOs to force operative system
  + Include configuration keys wdm.proxy, wdm.proxyUser, and wdm.proxyPass for proxy settings

 -- Boni Garcia <boni.gg@gmail.com>


webdrivermanager (2.0.0)

  + Relicense to Apache 2.0
  + New method in BrowserManager API: forceOperativeSystem(OperativeSystem operativeSystem)
  + New method in BrowserManager API: ignoreVersions(String... versions)
  + Use logback instead of simplelogger for logging
  + Stop using tyepsafe config library for handling properties
  + Override configuration values with environmental variables (e.g. WDM_TARGETPATH)
  + Improve management of proxy
  + Use SonarCloud to keep a good level of internal code quality
  + Use Codecov to keep a good level of code coverage
  + Reset state of browser managers after setup
  + Remove deprecated methods from version 1.x (MarionetteDriverManager, etc)
  + Upgrade to Selenium 3.7 for end-to-end tests
  + Improve test performance

 -- Boni Garcia <boni.gg@gmail.com>  Mon, 27 Nov 2017 04:22:00 +0200


webdrivermanager (1.7.2)

  + Add wdm.architecture configuration key (issue #154)
  + Read properties values from system environment as fallback to properties

 -- Boni Garcia <boni.gg@gmail.com>  Mon, 17 Sep 2017 13:28:00 +0200


webdrivermanager (1.7.1)

  + Use NTCredentials for NTLM AuthSchemes (PR #149 from andrew-sumner)
  + Avoid throwing exception in the case of non supported managers (e.g. RemoteWebDriver)
  + Improve support for new versions of operadriver (e.g. 2.27 and 2.29)

 -- Boni Garcia <boni.gg@gmail.com>  Mon, 10 Jul 2017 18:03:00 +0200


webdrivermanager (1.7.0)

  + Bug-fix: added connection manager shared (PR #140 from tharakadesilva)
  + Bug-fix: Improve support for Edge (issue #135)
  + Bug-fix: Support for latest version of operadriver (issues #134 and #146)